--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="/">COMP308</a>
+  <a class="navbar-brand" routerLink="/"><img src="../../../assets/images/LogoV.PNG" style="width:60px;height:50px"> My Portfolio</a>
   <button
     class="navbar-toggler"
     type="button"
