--- a/client/src/app/pages/contact/contact.component.html
+++ b/client/src/app/pages/contact/contact.component.html
@@ -1,16 +1,4 @@
 <app-base-page></app-base-page>>
-<!-- <div *ngIf="isLoggedIn()" class="container">
-  <div class="row">
-    <div class="col col-md-6">
-      <div class="card">
-        <h5 class="card-header alert-success">Secure</h5>
-        <div class="card-body">
-          <a routerLink="contact-list" class="btn btn-primary"><i class="fas fa-users fa-lg"></i> Contact List</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
 
 <!-- Project Name: E-Portfolio
    File Name: contact.ejs
@@ -51,6 +39,20 @@
 </div>       
 </div>
 </div>
+
+<div *ngIf="isLoggedIn()" class="container">
+  <div class="row">
+    <div class="col col-md-6">
+      <div class="card">
+        <h5 class="card-header alert-success">Secure</h5>
+        <div class="card-body">
+          <a routerLink="contact-list" class="btn btn-primary"><i class="fas fa-users fa-lg"></i> Contact List</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
 
